# schema-tools

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  AUTH_PROFILES.md  CHANGES.md  Dockerfile  Jenkinsfile  Makefile  PERMISSIONS.md  README.md  docker-compose.yml  pyproject.toml  pytest.ini  setup.cfg  setup.py
.github/: dependabot.yml
.github/test/: action.yml
.github/workflows/: deplic.yaml  licensecheck.yaml  pre-commit.yml  publish-to-pypi.yml  python-app.yml  test.yaml
.jenkins/: Dockerfile  docker-compose.yml  test.sh
consumer/: Dockerfile  docker-compose.yml
django_tests/: conftest.py  fixtures.py  pytest.ini  settings.py  test_auth_backend.py  test_models.py  test_profiles.py
docs/: import_event.py
schematools/: __init__.py  cli.py  create_schema.py  datasetcollection.py  db.py  models.py  permissions.py  types.py  utils.py  validation.py
schematools/contrib/django/: __init__.py  apps.py  auth_backend.py  cli.py  db.py  factories.py  fields.py  managers.py  models.py  validators.py
schematools/events/: __init__.py
schematools/importer/: __init__.py  base.py  geojson.py  ndjson.py
schematools/introspect/: db.py  geojson.py  utils.py
schematools/maps/: __init__.py  create.py
schematools/maps/generators/: mapfile.py  schema.py
schematools/maps/interfaces/: json_.py
schematools/provenance/: create.py
scripts/: create_schema.py
src/schematools/: __init__.py  _datasetcollection.py  _utils.py  cli.py  datasetcollection.py  db.py  exceptions.py  factories.py  loaders.py  models.py  naming.py  schema_tools_types.py  types.py  utils.py  validation.py
src/schematools/ckan/: __init__.py  _convert.py
src/schematools/events/: __init__.py  consumer.py  export.py  factories.py  full.py  partial.py
src/schematools/exports/: __init__.py  base.py  csv.py  geojson.py  geopackage.py  jsonlines.py  modifiers.py
src/schematools/importer/: __init__.py  base.py  geojson.py  ndjson.py
src/schematools/introspect/: db.py  geojson.py  utils.py
src/schematools/maps/: __init__.py  create.py
src/schematools/permissions/: __init__.py  auth.py  db.py
src/schematools/provenance/: create.py
tests/: conftest.py  fixtures.py  settings.py  test_auth_backend.py  test_ckan.py  test_cli.py  test_create_all.py  test_databricks_types.py  test_events.py  test_events_full.py  test_events_partial.py  test_export.py  test_exports.py  test_factory.py  test_geojson.py  test_import.py  test_indexes.py  test_loaders.py  test_models.py  test_naming.py  test_ndjson.py  test_permissions.py  test_permissions_auth.py  test_profiles.py  test_provanence.py  test_provenance.py  test_provenancemapper.py  test_rowclass.py  test_types.py  test_utils.py  test_validation.py
tests/django/: conftest.py  fixtures.py  test_create_views.py  test_import_publishers.py  test_import_scopes.py  test_mocking.py  test_model_mockers.py  test_models.py  test_models_profile.py  test_schema_import.py  test_schema_removal.py  utils.py
tests/files/: afval.json  afvalwegingen.json  afvalwegingen_clusters-table.json  afvalwegingen_sep_table.json  bbga.json  bouwblokken.json  brk.json  brp.json  compound_key.json  crs_validation.json  gebieden.json  gebieden_auth.json  gebieden_auth_list.json  ggwgebieden.json  hr.json  hr_auth.json  id_auth.json  identifier_ref.json  kadastraleobjecten.json  long_ids.json  meetbouten.json  meldingen.json  multirelation.json  not_a_json_file.txt  parkeervakken.json  rel_auth.json  stadsdelen.json  verblijfsobjecten.json  woningbouwplannen.json  woonplaatsen.json
tests/files/afvalwegingen_clusters/: v1.0.0.json
tests/files/data/: bouwblokken.gobevents  bouwblokken_delete.gobevents  bouwblokken_ligt_in_buurt_met_te_lange_naam.gobevents  bouwblokken_update.gobevents  brk_aantek_rechten.ndjson  fietspaaltjes.ndjson  gebieden-duplicate-id.ndjson  gebieden.ndjson  gebieden_bouwblokken_ligt_in_buurt.gobevents  gebieden_bouwblokken_ligt_in_buurt_delete.gobevents  gebieden_bouwblokken_ligt_in_buurt_update.gobevents  gebieden_ggwgebieden_bestaat_uit_buurten.gobevents  gebieden_ggwgebieden_bestaat_uit_buurten_delete.gobevents  gebieden_ggwgebieden_bestaat_uit_buurten_reltable_add.gobevents  gebieden_ggwgebieden_bestaat_uit_buurten_reltable_modify.gobevents  gebieden_ggwgebieden_bestaat_uit_buurten_update.gobevents  gebieden_gwwgebieden_bestaat_uit_buurten.gobevents  ggwgebieden-history.ndjson  ggwgebieden-no-embedded-rel-data.ndjson  ggwgebieden-with-geldigheid.ndjson  ggwgebieden.ndjson  ggwgebieden_bestaatuitbuurten.ndjson  hr.ndjson  hr_auth.ndjson  hr_missing_nmrelation.ndjson  hr_sbi_act_nr.ndjson  kadastraleobjecten.ndjson  kadastraleobjecten_geometry.gobevents  meetbouten-no-embedded-rel-data.ndjson  meetbouten.ndjson  meetbouten_ligt_in_buurt.ndjson  metingen.ndjson  peilmerken.gobevents  peilmerken_full_load_sequence_end.gobevents  peilmerken_full_load_sequence_start.gobevents  peilmerken_ligt_in_bouwblok.delete.gobevents  peilmerken_ligt_in_bouwblok.gobevents  stadsdelen.ndjson  tenaamstellingen.gobevents  tenaamstellingen_van_kadastraalsubject.gobevents  (+7 more)
tests/files/datasets/: aardgasverbruik.json  abbreviated_fieldnames.json  abbreviated_fieldnames_with_shortname.json  afval.json  afvalwegingen.json  afvalwegingen_sep_table.json  auth_on_multiple_versions.json  bag.json  bag_verblijfsobjecten.json  benk.json  bouwblokken.json  brk.json  brk2_simple.json  brk_without_bag_relations.json  brp.json  brp_row_level_auth.json  brp_row_level_auth_fail.json  composite_key.json  crs_validation.json  duplicate_shortnames.json  enum_types.json  exports_invalid.json  exports_invalid_scopes_dataset.json  exports_invalid_scopes_tables_fields.json  exports_valid.json  field_scopes_invalid.json  gebieden.json  gebieden_auth.json  gebieden_auth_list.json  gebieden_auth_scopes.json  gebieden_updated_comment.json  ggwgebieden.json  hr.json  hr_auth.json  hr_simple.json  hr_updated.json  id_auth.json  id_type.json  (+39 more)
tests_django/: __init__.py  conftest.py  fixtures.py  test_auth_backend.py  test_models.py  test_models_profile.py  test_schema_import.py
(+162 files in other folders)
