[project]
name = "amsterdam-schema-tools"
version = "9.11.0"
description = "Tools to work with Amsterdam Schema."
readme = "README.md"
requires-python = ">=3.10"
license = "MPL-2.0"
authors = [
    { name = "Team Data Diensten, van het Dataplatform onder de Directie Digitale Voorzieningen (Gemeente Amsterdam)", email = "datapunt@amsterdam.nl" },
]
keywords = ["jsonschema", "schema", "json", "amsterdam", "validation", "code-generation"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "click==8.4.2",
    "deepdiff==9.1.0",
    "factory_boy==3.3.3",
    "geoalchemy2==0.20.0",
    "jinja2==3.1.6",
    "jsonlines==4.0.0",
    "jsonpath-rw==1.4.0",
    "jsonschema[format]==4.26.0",
    "mappyfile==1.2.0",
    "more-ds==0.0.6",
    "more-itertools==11.1.0",
    "orjson==3.11.9",
    "pg-grant==0.4.0",
    "psycopg==3.3.4",
    "python-dateutil==2.9.0.post0",
    "python-string-utils==1.0.0",
    "remote-pdb==2.1.0",
    "requests==2.34.2",
    "shapely==2.1.2",
    "sqlalchemy==2.0.51",
    "sqlparse==0.5.5",
]

[dependency-groups]
dev = [
    "ruff==0.15.21",
    "ty==0.0.60",
    "types-requests==2.33.0.20260712",
    "types-click==7.1.8",
    "types-python-dateutil==2.9.0.20260716",
    "pre-commit==4.6.0",
    "pytest==9.1.1",
    "pytest-cov==7.1.0",
    "pytest-django==4.12.0",
    "pytest-sqlalchemy==0.3.0",
    "requests-mock==1.12.1",
    # Breaking change was introduced in 0.42:
    # https://github.com/kvesteri/sqlalchemy-utils/issues/791
    "sqlalchemy-utils == 0.41.2",
]

[project.optional-dependencies]
django = [
    "django >= 4.2, < 6.0, != 5.0, !=5.1",
    "django-gisserver >= 1.2.7",
    "django-environ==0.14.0",
    "factory_boy==3.3.3",
]
databricks = [
    "databricks-sdk==0.120.0"
]

[project.scripts]
schema = "schematools.cli:main"
django = "schematools.contrib.django.cli:main"

[project.urls]
Homepage = "https://github.com/amsterdam/schema-tools"
Repository = "https://github.com/amsterdam/schema-tools"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "schematools"
module-root = "src"

# ==== pytest ====
[tool.pytest.ini_options]
minversion = "9.0"
django_find_project = false
pythonpath = "./"
testpaths = ["tests"]
addopts = [
    "--doctest-modules",
    "--nomigrations",
    "--reuse-db",
    "--cov=schematools",
    "--cov-fail-under=76",
]
norecursedirs = ["node_modules", ".tox", ".git", "dist", "build", "venv", ".venv"]
filterwarnings = [
    "once::DeprecationWarning",
    "once::PendingDeprecationWarning",
    "ignore:Model '.*' was already registered. Reloading models is not advised.*:RuntimeWarning",
]

# ==== Coverage ====
[tool.coverage.run]
branch = true
source = ["schematools"]
omit = ["*/migrations/*.py", "*/tests/*"]
relative_files = true

[tool.coverage.report]
exclude_also = [
    "if settings.DEBUG:",
    'if "debug_toolbar" in settings.INSTALLED_APPS:',
    "raise NotImplementedError",
    "logger",
    "warnings.warn",
]

[tool.ruff]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
select = [
    "F", # pyflakes
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "I", # isort
    "B", # flake8-bugbear
    "C90", # mccabe
    "BLE", # flake8-blind-except
    "C4", # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "T10", # flake8-debugger
    "DJ", # flake8-django
    "ISC", # flake8-implicit-str-concat
    "G", # flake8-logging-format
    "PIE", # flake8-pie
    "PGH", # pygrep-hooks
    "RET", # flake8-return (partially)
    # "PT",  # flake8-pytest-style
    # "TCH",  # flake8-type-checking (moves import to `if typing.TYPE_CHECKING`)
    # "ERA",  # eradicate (commented out code)
    # "TRY",  # tryceratops
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "INT", # flake8-gettext
    "FLY", # flynt (fixes unneeded static string joins)
    "UP", # pyupgrade
    "S", # security (bugbear)
    "RUF010", # ruff: fix f"{str(..)}" usage
    "RUF013", # ruff: fix annotations for =None arguments
]
ignore = [
    "S311", # allow random.randint()
    "DJ001", # allow models.CharField(null=True)
    "SIM105", # enforcing contextlib.suppress() instead of try..catch
    "RET501", # unnecessary-return-none
    "RET505", # superfluous-else-return
    "RET505", # superfluous-else-return
    "RET506", # superfluous-else-raise
    "RET507", # superfluous-else-continue
    "RET508", # superfluous-else-break
    "S607", # subprocess partial path
]

[tool.ruff.lint.flake8-comprehensions]
allow-dict-calls-with-keyword-arguments = true

[tool.ruff.lint.flake8-gettext]
extend-function-names = ["gettext_lazy", "ngettext_lazy", "pgettext", "pgettext_lazy", "npgettext", "npgettext_lazy"]

[tool.ruff.lint.isort]
known-first-party = ["schematools"]

[tool.ruff.lint.mccabe]
max-complexity = 20  # TODO: lower this

[tool.ruff.lint.per-file-ignores]
"**/migrations/*.py" = ["E501"]  # line too long
"tests/**/*.py" = ["E501", "S101", "S105", "S106", "S314", "S608"]  # allow long lines, asserts, hardcoded passwords, SQL injection

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
