[metadata]
name = amsterdam-schema-tools
version = 5.18.0
url = https://github.com/amsterdam/schema-tools
license = Mozilla Public 2.0
author = Team Data Diensten, van het Dataplatform onder de Directie Digitale Voorzieningen (Gemeente Amsterdam)
author_email = datapunt@amsterdam.nl
description = Tools to work with Amsterdam Schema.
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    jsonschema
    schema
    json
    amsterdam
    validation
    code-generation
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Programming Language :: Python
    Programming Language :: Python :: 3.9
[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.9
install_requires =
    sqlalchemy >= 1.4, < 2.0
    geoalchemy2
    psycopg2
    pg-grant
    click
    deepdiff
    jsonlines
    jsonschema[format] >= 3.2.0
    shapely>=1.8.0
    python-string-utils
    python-dateutil
    requests
    jinja2
    mappyfile
    methodtools
    jsonpath-rw
    orjson
    more-ds
    factory_boy
    remote-pdb
    more-itertools
tests_require=
    pytest
    pytest-cov
    pytest-sqlalchemy
    requests-mock

[options.packages.find]
where = src

[options.extras_require]
tests =
    types-requests
    types-click
    types-python-dateutil
    flake8
    flake8-colors  # ANSI colors highlight for Flake8
    flake8-raise  # Find improvements for raise statements
    flake8-bandit  # Security checks
    flake8-bugbear  # Assorted opinionated checks
    flake8-builtins  # Check for name collision with builtins
    flake8-comprehensions # Write better list/set/dict comprehensions.
    flake8-docstrings  # Uses pydocstyle to check docstrings
    flake8-implicit-str-concat  #
    flake8-print  # Check for Print statements in python files
    flake8-rst  # Allows run flake8 on code snippets in docstrings or rst files
    flake8-string-format  # str.format checker
    flake8-logging-format  # Validate logging format strings
    pytest
    pytest-cov
    pytest-django
    pytest-sqlalchemy
django =
    django >= 3.0, < 4.2
    django-gisserver >= 1.2.3
    django-environ
    django-db-comments
    factory_boy
dev =
    build  # PEP5127 package builder (recommended by PYPA)
    twine  # Submmitting package to PYPI
    python-environ
kafka =
    confluent-kafka

[options.entry_points]
console_scripts =
    schema = schematools.cli:main
    django = schematools.contrib.django.cli:main

[tool:pytest]
testpaths =
    tests
norecursedirs =
    .tox
    .git
    dist
    build
    venv
    .venv
filterwarnings =
    once::DeprecationWarning
    once::PendingDeprecationWarning
    ignore:Model '.*' was already registered. Reloading models is not advised.*:RuntimeWarning
addopts = --doctest-modules
# can be enabled to emit log message immediately
log_cli = False

[flake8]
# A = builtins
# B = bugbear
# C4 = comprehensions
# D = docstrings
# E = pycodestyle errors, rst
# F = flake8 pyflakes, rst
# G = logging-format
# P = str-format
# RST = rst-docstrings
# S = bandit
# T = print
# W = pycodestyle warnings
# B9 = bugbear opinions
# ISC = implicit-str-concat
ban-relative-imports = True
max-line-length = 99
docstring-convention = google
statistics = True
select = A, B, C4, D, E, F, G, P, RST, S, T, W, B9, ISC
doctests = True
extend-ignore =
    # D100  Missing docstring in public module
    D100,
    # Missing docstring in magic method
    D105,
    # E203  Black may add spaces in slice[func(v) : end] syntax
    E203,
    # E231  Black leaves commas after combining lines
    E231,
    # F403  Allow import * (for settings)
    F403,
    # F405  Allow import * (for settings)
    F405,
    # E731  Allow lambdas:
    E731,
    # R102  Allow raise Exception()
    R102,
    # Line break before binary operator; disagrees with black
    W503,
per-file-ignores =
    # Use of assert detected.
    # Missing docstring in public class, method, function, package, nested class, __init__
    tests/**: S101,D101,D102,D103,D104,D105,D106,D107
    src/schematools/permissions/__init__.py: D104
exclude =
    .git,
    **/migrations/*,
    docs,
    scripts,
    .cache,
    .eggs,
    __pycache__,
    build,
    dist,
    .venv,
    venv
